[package]
name = "sampleworkflowlib"
license = "MIT OR Apache-2.0"
version = "0.1.0"
edition = "2021"
authors = ["Adithya Kolla"]
description = "A sample workflow library"
readme = "README.md"
repository = "https://github.com/KollaAdithya/sampleworkflowlib"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11"
tokio = { version = "1", features = ["full"] }